# hnefatafl-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
.githooks/: pre-commit
.github/workflows/: clippy.yml  tests.yml
resources/test/games/: brandubh.csv
src/: aliases.rs  big_bitfields.rs  bitfield.rs  board.rs  board_geo.rs  board_state.rs  error.rs  game.rs  game_logic.rs  game_state.rs  lib.rs  main.rs  otn.rs  pieces.rs  play.rs  play_iter.rs  preset.rs  rules.rs  serde_utils.rs  tile_iter.rs  tiles.rs  tileset.rs  traits.rs  utils.rs  variant.rs
src/board/: geometry.rs  mod.rs  state.rs
src/collections/: mod.rs  piecedict.rs  piecemap.rs  pieceset.rs  piecetypedict.rs  tileset.rs
src/game/: logic.rs  mod.rs  state.rs
tests/: test_real_games.rs
